dependencies/charon/charon/tests/ui/monomorphization/dyn-trait.out

thread 'rustc' panicked at src/bin/charon-driver/translate/translate_trait_objects.rs:1709:13:
Could not determine method index for drop in vtable
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `core::fmt::Display`.
 --> /rustc/library/core/src/fmt/mod.rs:1186:1

note: the error occurred when translating `core::fmt::Display::{vtable_drop_preshim}`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----

thread 'rustc' panicked at src/bin/charon-driver/translate/translate_trait_objects.rs:1587:13:
Could not determine method index for method_fmt in vtable
error: Thread panicked when extracting item `core::fmt::Display`.
 --> /rustc/library/core/src/fmt/mod.rs:1186:1

note: the error occurred when translating `core::fmt::Display::fmt::{vtable_method_preshim}`, which is (transitively) used at the following location(s):
  --> tests/ui/monomorphization/dyn-trait.rs:12:27
   |
12 |     let _ = dyn_to_string(&str);
   |                           ----
ERROR Charon failed to translate this code (2 errors)
